# Coding-in-C

./: CMakeLists.txt  main.c
src/: Emisia_1.c  set_operations_w_horda.c  week_4.c  week_5.c  week_8.c  week_9.c
