cmake_minimum_required(VERSION 3.20)
project(prog_sem C)

set(CMAKE_C_STANDARD 99)

add_executable(set_operations src/set_operations.c)
add_executable(w_4 src/week_4.c)
add_executable(w_5 src/week_5.c)
add_executable(w_8 src/week_8.c)
add_executable(E_1 src/Emisia_1.c)
add_executable(set_operations2 src/set_operations_w_horda.c)
add_executable(w_9 src/week_9.c)

